--- a/openrem/remapp/templates/remapp/openskinsafelist_add.html
+++ b/openrem/remapp/templates/remapp/openskinsafelist_add.html
@@ -35,18 +35,20 @@
                         <td>{{ equipment.software_versions }}</td>
                     </tr>
                 </table>
+                <div class="col-md-10 col-md-offset-1">
                 <form method="post">
                     {% csrf_token %}
                     {{ form.manufacturer.as_hidden }}
                     {{ form.manufacturer_model_name.as_hidden }}
                     {{ form.software_version.as_hidden }}
-                    <input type="submit" value="Add model and this version to list" name="version"
+                    <input type="submit" value="Add model and this version to safe list" name="version"
                            class="btn btn-default">
                     <input type="submit" value="Add the model to safe list" name="model" class="btn btn-default">
                     <a href="{% url 'display_names_view' %}" role="button" class="btn btn-default">
                         Cancel and return to display names page
                     </a>
                 </form>
+                </div>
             {% else %}
                 <p>
                     <strong>Only users in the Admin group can modify the openSkin safe list.</strong>
@@ -56,11 +58,11 @@
     </div>
     <div class="row">&nbsp;</div>
     <div class="row">
-        <div class="col-md-offset-3 col-md-6">
-            <h4>If you add the <b>model and software version</b> into the safe list entry, only the following units will
+        <div class="col-md-offset-1 col-md-10">
+            <h4>If you add the <b>model and software version</b> into the safe list entry, the following units will
                 be
                 marked as safe</h4>
-            <table class="table table-bordered table-hover sortable">
+            <table class="table table-bordered table-hover sortable small">
                 <thead>
                 <tr>
                     <th scope="col">Display name</th>
@@ -92,7 +94,7 @@
 
             </table>
             <h4>If you add the <b>model</b> to the safe list, all the following units will be marked as safe</h4>
-            <table class="table table-bordered table-hover sortable">
+            <table class="table table-bordered table-hover sortable small">
                 <thead>
                 <tr>
                     <th scope="col">Display name</th>
