--- a/openrem/remapp/templates/remapp/displayname-skinmap.html
+++ b/openrem/remapp/templates/remapp/displayname-skinmap.html
@@ -1,7 +1,10 @@
-{% if all_model %}
-by model and version <a href="{% url 'skinsafelist_delete' pk=safe_list_pk %}">remove version restriction</a>
-{% elif skin_map_enabled %}
-by model <a href="{% url 'skinsafelist_update' pk=safe_list_pk equip_name_pk=equip_name_pk %}">add version restriction</a>
+{% if model_only %}
+    <a href="{% url 'skinsafelist_update' pk=safe_list_pk equip_name_pk=equip_name_pk %}">add version restriction</a>
     <a href="{% url 'skinsafelist_delete' pk=safe_list_pk %}">or remove</a>
+{% elif version_only %}
+    <a href="{% url 'skinsafelist_update' pk=safe_list_pk equip_name_pk=equip_name_pk %}">remove version restriction</a>
+    <a href="{% url 'skinsafelist_delete' pk=safe_list_pk %}">or remove</a>
+{% elif model_and_version %}
+    <a href="{% url 'skinsafelist_delete' pk=safe_list_pk %}">remove version restriction</a>
 {% else %}<a href="{% url 'skinsafelist_add' equip_name_pk=equip_name_pk %}">No - add</a>
 {% endif %}
