--- a/openrem/remapp/templates/remapp/openskinsafelist_confirm_delete.html
+++ b/openrem/remapp/templates/remapp/openskinsafelist_confirm_delete.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="col-md-10 col-md-offset-1">
                 <div class="row">
-                {% if all_model %}
+                {% if model_and_version %}
                     <p>
                     Deleting this entry will not change which systems are processed as this manufacturer
                     and model are in the list without the software restriction.
