--- a/openrem/remapp/templates/remapp/displayname-skinmap.html
+++ b/openrem/remapp/templates/remapp/displayname-skinmap.html
@@ -1,4 +1,6 @@
-{% if model_only %}
+{% if illegal %}
+Something went wrong!
+{% elif model_only %}
     <a href="{% url 'skinsafelist_update' pk=safe_list_pk equip_name_pk=equip_name_pk %}">add version restriction</a>
     <a href="{% url 'skinsafelist_delete' pk=safe_list_pk %}">or disable</a>
 {% elif version_only %}
