--- a/openrem/remapp/templates/remapp/displayname-last-date.html
+++ b/openrem/remapp/templates/remapp/displayname-last-date.html
@@ -1,4 +1,4 @@
 {% if latest %}
 <div style="display:none;">{{ latest|date:"Ymd" }}</div>
-{{ latest }}
+<a style="text-decoration: none">{{ latest }}</a>
 {% endif %}
