--- a/openrem/remapp/templates/remapp/openskinsafelist_confirm_delete.html
+++ b/openrem/remapp/templates/remapp/openskinsafelist_confirm_delete.html
@@ -1,4 +1,5 @@
 {% extends "remapp/base.html" %}
+{% load i18n %}
 
 {% block navhelp %}
     <li>
@@ -34,7 +35,7 @@
                     </tr>
                 </table>
 
-            {% if admin.admingroup %}
+            {% if admin.admingroup and allow_safelist_modify %}
                 <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                 <form method="post">{% csrf_token %}
@@ -90,12 +91,12 @@
                 {% endif %}
                 </div>
                 </div>
-            {% else %}
                 <div class="row">
                 <div class="col-md-offset-3 col-md-6">
-                <p>
-                    <strong>Only users in the Admin group can modify the openSkin safe list.</strong>
-                </p>
+            {% elif not admin.admingroup %}
+                    <h4>{% trans "Only users in the Admin group can modify the openSkin safe list." %}</h4>
+            {% else %}
+                    <h4>{% trans "Skin dose map settings do not allow safelist to be updated" %}</h4>
             {% endif %}
             </div>
             </div>
