--- a/openrem/remapp/templates/remapp/openskinsafelist_form.html
+++ b/openrem/remapp/templates/remapp/openskinsafelist_form.html
@@ -2,14 +2,12 @@
 {% load i18n %}
 
 {% block navhelp %}
-    <li>
-        <a
-                href="https://docs.openrem.org/en/{{ admin.docsversion }}/i_not_patient_indicator.html"
-                target="_blank" rel="noopener noreferrer"
-                data-toggle="tooltip" title="Not-patient indicators documentation - opens in a new tab">
-            Not-patient indicator documentation
-        </a>
-    </li>
+        <li>
+            <a href="https://docs.openrem.org/en/{{ admin.docsversion }}/skindosemap.html"
+               target="_blank" data-toggle="tooltip" title="Skin dose map documentation - opens in a new tab">
+                Skin dose maps
+            </a>
+        </li>
 {% endblock %}
 
 {% block confnav %}
