--- a/openrem/remapp/static/css/openrem-extra.css
+++ b/openrem/remapp/static/css/openrem-extra.css
@@ -394,6 +394,7 @@ ul.CheckboxSelectMultiple {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  background-color: #FFFFFF;
 }
 
 ul.RadioSelect {
