Shading the background of the label as well as widget for any CheckboxSelectMultiple items in the filtered page chart options and the general chart options. Refs issue #911

--- a/openrem/remapp/static/css/openrem-extra.css
+++ b/openrem/remapp/static/css/openrem-extra.css
@@ -394,6 +394,9 @@ ul.CheckboxSelectMultiple {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+td.shaded_background {
   background-color: #DDDDDD;
 }
 
