--- a/openrem/remapp/templates/remapp/mgfiltered.html
+++ b/openrem/remapp/templates/remapp/mgfiltered.html
@@ -86,7 +86,17 @@
             <div class="panel-body">
                 <table aria-describedby="Mammography chart options">
                     {% csrf_token %}
-                    {{ chartOptionsForm }}
+                    {% for field in chartOptionsForm %}
+                        <tr>
+                        {% ifequal field.field.widget.attrs.class 'CheckboxSelectMultiple' %}
+                            <td class="shaded_background"><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
+                            <td class="shaded_background">{{ field }}</td>
+                        {% else %}
+                            <td><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
+                            <td>{{ field }}</td>
+                        {% endifequal %}
+                        </tr>
+                    {% endfor %}
                 </table>
                 <input class="btn btn-default" name="submit" type="submit" />
             </div>
