Changed styling of CheckboxSelectMultiple items in chart options. Now light blue background with a darker blue top and bottom border. The border shade matches the shade used for the background of the chart options heading [skip ci]. Refs issue #917

--- a/openrem/remapp/templates/remapp/displaychartoptions.html
+++ b/openrem/remapp/templates/remapp/displaychartoptions.html
@@ -34,8 +34,8 @@
                     <tr>
                         {% if field.name != "plotColourMapChoice" %}
                             {% ifequal field.field.widget.attrs.class 'CheckboxSelectMultiple' %}
-                                <td class="shaded_background">{{ field.label_tag }}</td>
-                                <td class="shaded_background">{{ field }}</td>
+                                <td class="shaded_top_bottom_border">{{ field.label_tag }}</td>
+                                <td class="shaded_top_bottom_border">{{ field }}</td>
                             {% else %}
                                 <td>{{ field.label_tag }}</td>
                                 <td>{{ field }}</td>
@@ -78,8 +78,8 @@
             {% for field in CTChartOptionsForm %}
                 <tr>
                 {% ifequal field.field.widget.attrs.class 'CheckboxSelectMultiple' %}
-                    <td class="shaded_background"><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
-                    <td class="shaded_background">{{ field }}</td>
+                    <td class="shaded_top_bottom_border"><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
+                    <td class="shaded_top_bottom_border">{{ field }}</td>
                 {% else %}
                     <td><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
                     <td>{{ field }}</td>
