--- a/openrem/remapp/static/css/openrem-extra.css
+++ b/openrem/remapp/static/css/openrem-extra.css
@@ -397,7 +397,13 @@ ul.CheckboxSelectMultiple {
 }
 
 td.shaded_background {
-  background-color: #DDDDDD;
+  background-color: #F5FAFD;
+}
+
+td.shaded_top_bottom_border {
+  background-color: #F5FAFD;
+  border-top: 1px solid #D9EDF7;
+  border-bottom: 1px solid #D9EDF7;
 }
 
 ul.RadioSelect {
