--- a/openrem/remapp/templates/remapp/dxfiltered.html
+++ b/openrem/remapp/templates/remapp/dxfiltered.html
@@ -95,8 +95,8 @@
                     {% for field in chartOptionsForm %}
                         <tr>
                         {% ifequal field.field.widget.attrs.class 'CheckboxSelectMultiple' %}
-                            <td class="shaded_background"><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
-                            <td class="shaded_background">{{ field }}</td>
+                            <td class="shaded_top_bottom_border"><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
+                            <td class="shaded_top_bottom_border">{{ field }}</td>
                         {% else %}
                             <td><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
                             <td>{{ field }}</td>
