Added percentile chart for other CT charts. I've broken the average choice box with my custom template code - need to fix this (if a user submits two options, only one is maintained when the page reloads with the charts). Refs issue #918

--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -99,7 +99,7 @@
                                     <ul id={{ field.auto_id }} class='CheckboxSelectMultiple'>
                                     {% for choice in field.field.widget.choices %}
                                         <li>
-                                            <label for={{ field.auto_id }}_{{ forloop.counter0 }}>
+                                            <label for="{{ field.auto_id }}_{{ forloop.counter0 }}">
                                                 <input
                                                         type="checkbox" class="CheckboxSelectMultiple"
                                                         name="{{ field.name }}" value="{{ choice.0 }}"
