Replaced common template block with an import statement and new template file. Made chart average choices work on new page visit, or on form submission. Refs issue #918

--- a/openrem/remapp/templates/remapp/mgfiltered.html
+++ b/openrem/remapp/templates/remapp/mgfiltered.html
@@ -8,8 +8,6 @@
       </p>
 {% endblock %}
 
-{% load humanize %}
-
 {% block col2 %}
   <div class="panel panel-info small">
   <div class="panel-heading">
@@ -92,29 +90,7 @@
                             <td class="shaded_top_bottom_border"><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
 
                             {% if field.name == 'plotAverageChoice' %}
-                                <td class="shaded_top_bottom_border">
-                                    <ul id={{ field.auto_id }} class='CheckboxSelectMultiple'>
-                                    {% for choice in field.field.widget.choices %}
-                                        <li>
-                                            <label for="{{ field.auto_id }}_{{ forloop.counter0 }}">
-                                                <input
-                                                        type="checkbox" class="CheckboxSelectMultiple"
-                                                        name="{{ field.name }}" value="{{ choice.0 }}"
-                                                        id="{{ field.auto_id }}_{{ forloop.counter0 }}"
-                                                        {% if choice.0 in chartOptionsForm.cleaned_data.plotAverageChoice %}
-                                                            checked
-                                                        {% endif %}
-                                                >
-                                                {% if choice.0 == 'percentile' %}
-                                                    {{ request.user.userprofile.plotPercentileVal|ordinal }} {{ choice.0 }}
-                                                {% else %}
-                                                    {{ choice.1 }}
-                                                {% endif %}
-                                            </label>
-                                        </li>
-                                    {% endfor %}
-                                    </ul>
-                                </td>
+                                {% include "remapp/plotAverageChoiceFormRender.html" %}
                             {% else %}
                                 <td class="shaded_top_bottom_border">{{ field }}</td>
                             {% endif %}
