--- a/openrem/remapp/templates/remapp/standardnames_form.html
+++ b/openrem/remapp/templates/remapp/standardnames_form.html
@@ -23,8 +23,18 @@
             </p>
 
             {% if admin.admingroup %}
-                {% load crispy_forms_tags %}
-                {% crispy form %}
+            <div class="panel-body">
+                <table aria-describedby="Add a new standard name">
+                    {% csrf_token %}
+                    {% for field in form %}
+                        <tr>
+                            <td><label for="{{ field.auto_id }}">{{ field.label }}:</label></td>
+                            <td>{{ field }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+                <input class="btn btn-default" name="submit" type="submit" />
+            </div>
             {% else %}
                 <p>
                     <strong>Only users in the Admin group can create or modify standard names.</strong>
