--- a/openrem/remapp/templates/remapp/standardnames_form.html
+++ b/openrem/remapp/templates/remapp/standardnames_form.html
@@ -24,16 +24,18 @@
 
             {% if admin.admingroup %}
             <div class="panel-body">
-                <table aria-describedby="Add a new standard name">
+                <form action="" method="post" class="form-horizontal" role="form">
                     {% csrf_token %}
-                    {% for field in form %}
-                        <tr>
-                            <td><label for="{{ field.auto_id }}">{{ field.label }}:</label></td>
-                            <td>{{ field }}</td>
-                        </tr>
-                    {% endfor %}
-                </table>
-                <input class="btn btn-default" name="submit" type="submit" />
+                    <table aria-describedby="Add a new standard name">
+                        {% for field in form %}
+                            <tr>
+                                <td><label for="{{ field.auto_id }}">{{ field.label }}:</label></td>
+                                <td>{{ field }}</td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                    <input class="btn btn-default" name="submit" type="submit" />
+                </form>
             </div>
             {% else %}
                 <p>
