--- a/openrem/remapp/templates/remapp/standardnames_form.html
+++ b/openrem/remapp/templates/remapp/standardnames_form.html
@@ -26,8 +26,11 @@
             <div class="panel-body">
                 <form action="" method="post" class="form-horizontal" role="form">
                     {% csrf_token %}
+                    {% for hidden in form.hidden_fields %}
+                        {{ hidden }}
+                    {% endfor %}
                     <table aria-describedby="Add a new standard name">
-                        {% for field in form %}
+                        {% for field in form.visible_fields %}
                             <tr>
                                 <td><label for="{{ field.auto_id }}">{{ field.label }}:</label></td>
                                 <td>{{ field }}</td>
