--- a/openrem/remapp/templates/remapp/standardnames_form.html
+++ b/openrem/remapp/templates/remapp/standardnames_form.html
@@ -16,7 +16,7 @@
 
       <div class="row">
         <div class="col-md-offset-2 col-md-8">
-            <h3>Create or modify a standard {{ modality }} name</h3>
+            <h3>Create or modify a standard name for {{ modality_name }} systems</h3>
             <p>
                 Use this form to create or modify the standard name associated with a study
                 description, requested procedure, procedure or acquisition protocol name.
