--- a/openrem/remapp/templates/remapp/standardname-modality.html
+++ b/openrem/remapp/templates/remapp/standardname-modality.html
@@ -7,8 +7,8 @@
     <th scope="col">Procedure</th>
     <th scope="col">Acquisition protocol</th>
     {% if admin.admingroup %}
-        <th scope="col">Modify</th>
-        <th scope="col">Delete</th>
+        <th scope="col">Modify?</th>
+        <th scope="col">Delete?</th>
     {% endif %}
   </tr>
   {% for eachrow in name_set %}
@@ -19,8 +19,8 @@
       <td><a style="text-decoration: none">{{ eachrow.procedure_code_meaning }}</a></td>
       <td><a style="text-decoration: none">{{ eachrow.acquisition_protocol }}</a></td>
       {% if admin.admingroup %}
-          <td><a class="btn btn-primary" href="" role="button">Modify</a></td>
-          <td><a class="btn btn-danger" href="" role="button">Delete</a></td>
+          <td><a href="" role="button">Modify</a></td>
+          <td><a href="{% url 'standard_name_delete' pk=eachrow.pk %}" role="button">Delete</a></td>
       {% endif %}
     </tr>
   {% endfor %}
